fixed alignment

--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@ body{
     background-color: #f3e5d8;
     font-family: 'Outfit', sans-serif;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    margin: 0;
+
     
 }
 
@@ -29,7 +35,7 @@ h1{
 .recipe-container{
     padding: 2rem;
     max-width: 700px;
-    margin: 2rem auto;
+    margin: 5rem auto;
     border-radius: 10px;
     background-color: white;
     color: hsl(24, 5%, 18%);
